[gd_scene load_steps=7 format=2]

[ext_resource path="res://Levels/Level2/LogPlatform.gd" type="Script" id=1]
[ext_resource path="res://assets/Forest Objects/logBoat.png" type="Texture" id=2]
[ext_resource path="res://assets/audio/motor.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/Forest Objects/stick.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.5, 5.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 10 )

[node name="LogBoat" type="Node2D"]
script = ExtResource( 1 )
duration = 1.0

[node name="Debug_Line" type="Node2D" parent="."]

[node name="Base" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Base"]
texture = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="Base"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base/KinematicBody2D"]
position = Vector2( 0.5, 1.5 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="Base"]

[node name="PlatformSound" type="AudioStreamPlayer2D" parent="Base"]
stream = ExtResource( 3 )
max_distance = 1000.0

[node name="OnLog" type="Area2D" parent="Base"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base/OnLog"]
position = Vector2( 2, -11 )
shape = SubResource( 2 )

[node name="StickHint" type="Sprite" parent="Base"]
visible = false
position = Vector2( 0, -66 )
texture = ExtResource( 4 )

[connection signal="tween_completed" from="Base/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="Base/OnLog" to="." method="_on_OnLog_body_entered"]
[connection signal="body_exited" from="Base/OnLog" to="." method="_on_OnLog_body_exited"]
